--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -42,6 +42,7 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
+        cd ~/.vscode/Threat-Composer-App/app
         docker build -t siada2/ecs .
         docker tag siada2/ecs:latest 174350032095.dkr.ecr.eu-west-2.amazonaws.com/siada2/ecs:latest
         docker push 174350032095.dkr.ecr.eu-west-2.amazonaws.com/siada2/ecs:latest
