--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,12 +12,11 @@ permissions:
   contents: read
 
 jobs:
-  deploy:
-    name: Deploy
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Checkout code
       uses: actions/checkout@v4
 
     - name: Configure AWS credentials
