--- a/.github/workflows/push-2.yml
+++ b/.github/workflows/push-2.yml
@@ -39,6 +39,7 @@ jobs:
         # Build a docker container and
         # push it to ECR so that it can
         # be deployed to ECS.
+        aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin $ECR_REPOSITORY
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
