--- a/.github/workflows/push-2.yml
+++ b/.github/workflows/push-2.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
     - name: Checkout
@@ -28,12 +28,28 @@ jobs:
       with:
         mask-password: true
 
-    - name: Build, tag, and push image to Amazon ECR
+    - name: Build and tag image 
       id: build-image
       run: |
         cd app
         aws ecr get-login-password --region eu-west-2 | docker login --username AWS --password-stdin 174350032095.dkr.ecr.eu-west-2.amazonaws.com
         docker build -t siada2/ecs .
         docker tag siada2/ecs:latest 174350032095.dkr.ecr.eu-west-2.amazonaws.com/siada2/ecs:latest
+    
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@0.28.0
+      with:
+        image-ref: 174350032095.dkr.ecr.eu-west-2.amazonaws.com/siada2/ecs:latest
+
+    - name: Push to Amazon ECR
+      run: |
         docker push 174350032095.dkr.ecr.eu-west-2.amazonaws.com/siada2/ecs:latest
+      
+      if: success()
+
+        
+    
+    
+  
+
         
