--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,8 +1,8 @@
 name: Push to Amazon ECR
 
 on:
-  push:
-    branches: [ "main" ]
+  # push:
+    # branches: [ "main" ]
 
 env:
   AWS_REGION: eu-west-2                           
