--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -12,8 +12,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      # - name: Run Trivy vulnerability scanner
-      #   uses: aquasecurity/trivy-action@0.28.0
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
