--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -2,12 +2,16 @@ name: Terraform apply
 
 on: 
   push:
+    branches: [main]
   workflow_dispatch: 
     inputs:
         terraform-apply:
             description: 'Terraform apply?'
             required: true
             type: string
+env:
+  AWS_REGION: eu-west-2
+
 
 jobs:   
   apply:
@@ -15,11 +19,21 @@ jobs:
 
     steps:
 
-      - name: Terraform apply
-        uses: dflook/terraform-apply@v2
-        with:
-          path: Terraform
-          auto_approve: true
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Configure AWS credentials
+          uses: aws-actions/configure-aws-credentials@v1
+          with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-region: ${{ env.AWS_REGION }}
+
+        - name: Terraform apply
+          uses: dflook/terraform-apply@v2
+          with:
+            path: Terraform
+            auto_approve: true
 
 
         
