--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -1,8 +1,8 @@
 name: Terraform Plan
 
 on:
-  push: 
-    branches: [main]
+  # push: 
+  #   branches: [main]
   workflow_dispatch: 
     inputs:
         terraform-plan:
