--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch: 
     inputs:
         terraform-plan:
-            description: 'Terraform apply?'
+            description: 'Terraform plan?'
             required: true
             type: string
 
